# aep-kv

./: .gitignore  CMakeLists.txt  README.md
doc/: aep-kv.md  基于AEP的可持久化KV存储.pptx
include/: db.hpp
judge/: README.md  judge.cpp  judge.sh  random.cpp  random.h
nvm_engine/: NvmEngine.cpp  NvmEngine.hpp  concurrentqueue.h  define.h  makefile  memory_cotroller.h  nvm_engine.cpp  nvm_engine.hpp
test/: test.cpp
